# tinytransformer

./: .gitignore  README.md  pyproject.toml
scripts/: demo_gpt_training.py
src/tinytransformer/: activations.py  attention.py  autograd.py  block.py  dataset.py  embeddings.py  layers.py  loss.py  ops.py  tokenizer.py  training.py  transformer.py
tests/: test_activations.py  test_attention.py  test_autograd.py  test_block.py  test_dataset.py  test_embeddings.py  test_layers.py  test_linear.py  test_loss.py  test_ops.py  test_tokenizer.py  test_training.py  test_transformer.py
