[project]
name = "tinytransformer"
version = "0.1.0"
description = "A learning lab for building a minimal transformer from scratch."
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]